Changement de la pallette de couleur

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*Color Pallette*/
 :root {
-  --main-bg: #F2F2F2;
-  --accent-bg: #EAE4D5;
-  --secondary: #B6B09F;
-  --text: #000000;
+  --main-bg: #1B262C;
+  --accent-bg: #0F4C75;
+  --secondary: #3282B8;
+  --text: #BBE1FA;
 }
 
 
