une nouvelle class cree puis titre ameliorer et p ameliorer

--- a/style.css
+++ b/style.css
@@ -83,3 +83,15 @@ p {
   border-radius: 8px;
 }
 
+.projets {
+  font-size: 20px;
+}
+
+.projets h1 {
+  font-size: 50px;
+}
+
+.projets p {
+  font-size: 20px;
+}
+
