--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.nom-coequipier {
+  font-size: 2.5em;
+  color: #FFD700;
+  margin-bottom: 0.2em;
+}
 /* Import JetBrains Mono (web font) */
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600;700&display=swap');
 
