--- a/style.css
+++ b/style.css
@@ -1,6 +1,23 @@
+.photo-coequipier {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 50%;
+  display: block;
+  margin-bottom: 0.5em;
+  float: right;
+  margin-left: 30px;
+}
+.nom-coequipier a {
+  color: var(--secondary);
+  
+}
+.nom-coequipier a:hover {
+  text-decoration: underline;
+}
 .nom-coequipier {
-  font-size: 2.5em;
-  color: #FFD700;
+  font-size: 60px;
+  color: var(--secondary);
   margin-bottom: 0.2em;
 }
 /* Import JetBrains Mono (web font) */
