--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Centrage de la photo du coéquipier */
 .photo-coequipier {
   width: 200px;
   height: 200px;
@@ -5,20 +6,27 @@
   border-radius: 50%;
   display: block;
   margin-bottom: 0.5em;
-  float: right;
-  margin-left: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  float: none;
 }
+
 .nom-coequipier a {
   color: var(--secondary);
-  
 }
 .nom-coequipier a:hover {
   text-decoration: underline;
 }
+
 .nom-coequipier {
   font-size: 60px;
   color: var(--secondary);
   margin-bottom: 0.2em;
+  text-align: center;
+}
+/* Centrer le contenu de chaque membre */
+.member {
+  text-align: center;
 }
 /* Import JetBrains Mono (web font) */
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600;700&display=swap');
