Changement du logo et des couleur du site.

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@
 
 /*Color Pallette*/
 :root {
-  --main-bg: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%,rgba(2,0,36,1) 100%); /* https://cssgradient.io/ */
+  --main-bg: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(37, 9, 121) 35%,rgba(2,0,36,1) 100%); /* https://cssgradient.io/ */
   --accent-bg: #05054b;
   --secondary: #ffffff;
   --text: #ffffff;
